# process-class-list

./: CHANGELOG.md  fourmolu.yaml  process-class-list.cabal
app/: Main.hs
