cabal-version:      3.0
name:               process-class-list
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable process-class-list
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0,
                      typed-process ^>=0.2.11.0,
                      filepath^>=1.4.2,
                      cassava^>=0.5.3.0,
                      bytestring^>=0.11,
                      vector^>=0.13,
    hs-source-dirs:   app
    default-language: Haskell2010
